<resources>
    <string name="app_name">Kirat Broadband</string>
    <string name="app_version">v5.0.1</string>
    <string name="action_account">Profile</string>
    <string name="action_edit">Edit</string>
    <string name="responseMessage">Your complaint has been registered. We are trying to solve as soon as possible</string>
    <string name="ok">Ok</string>

    <string-array name="Spinner_Location">
        <item>Select City/Village</item>
    </string-array>


    <string name="permission_rationale">Permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_customer_home">CustomerHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_complainStatus">Complaint Status</string>
    <string name="menu_contactUs">Contact Us</string>
    <string name="menu_help">Help</string>
    <string name="menu_aboutUs">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_about_us">AboutUs</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>