<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_status"
            android:onClick="ComplaintStatus"
            android:icon="@drawable/ic_view_report"
            android:title="@string/menu_complainStatus" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_contactus"
                android:onClick="ContactUs"
                android:icon="@drawable/ic_contact_us"
                android:title="@string/menu_contactUs" />
            <item
                android:id="@+id/nav_help"
                android:onClick="Help"
                android:icon="@drawable/ic_help_24"
                android:title="@string/menu_help" />

            <item
                android:id="@+id/nav_about"
                android:onClick="AboutUs"
                android:icon="@drawable/ic_aboutus"
                android:title="@string/menu_aboutUs" />

            <item
                android:id="@+id/nav_share"
                android:onClick="Share"
                android:icon="@drawable/ic_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

    <item android:title="Logout">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_24"
                android:onClick="Logout"
                android:title="Logout" />
        </menu>
    </item>
</menu>